--- a/projects.html
+++ b/projects.html
@@ -13,14 +13,14 @@
   </head>
   <body class="bg-black-pearl text-sm md:text-lg font-raleway mb-20 p-0">
     <header class="pt-8 pb-8 pl-12 pr-12 bg-transparent">
-      <a href="template.html"
+      <a href="index.html"
         ><img src="./img/logo.png" width="48" height="48" alt=""
       /></a>
     </header>
     <main>
       <div class="flex flex-col justify-center text-white mx-6 sm:mx-20">
         <div class="flex flex-wrap gap-4">
-          <a href="template.html">
+          <a href="index.html">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="30"
@@ -77,44 +77,32 @@
             id="projects-box"
           >
             <img
-              src="img/weather_app.png"
+              src="img/skytrip.png"
               alt=""
               class="w-full h-[350px] object-cover block rounded-t-lg"
             />
             <div class="p-4" id="info">
               <div class="flex flex-row justify-between">
-                <h3 class="text-xl font-bold mb-2">Weather App</h3>
+                <h3 class="text-xl font-bold mb-2">SkyTrip</h3>
                 <div class="flex flex-wrap justify-end gap-3">
-                  <a
-                    href="https://github.com/ivand38/js-weather-app"
-                    target="_blank"
+                  <a href="https://github.com/ivand38/SkyTrip" target="_blank"
                     ><i class="bi bi-github"></i
-                  ></a>
-                  <a
-                    href="https://ivand38.github.io/js-weather-app/"
-                    target="_blank"
-                    ><i class="bi bi-box-arrow-up-right"></i
                   ></a>
                 </div>
               </div>
               <p class="text-sm font-medium line-clamp-4 mb-4">
-                A simple weather app built using JavaScript, leveraging the
-                Visual Crossing API to provide accurate and up-to-date weather
-                information.
+                SkyTrip is a flight booking app built with Flutter and Firebase,
+                allowing users to book plane tickets for trips to various
+                countries seamlessly.
               </p>
               <div class="flex flex-wrap justify-start gap-2">
                 <img
-                  src="https://img.shields.io/badge/HTML-e34c26?style=for-the-badge&logo=html5&logoColor=white"
+                  src="https://img.shields.io/badge/Flutter-02569B?style=for-the-badge&logo=flutter&logoColor=white"
                   alt=""
                   class="h-6"
                 />
                 <img
-                  src="https://img.shields.io/badge/Tailwind-06B6D4?style=for-the-badge&logo=tailwind-css&logoColor=white"
-                  alt=""
-                  class="h-6"
-                />
-                <img
-                  src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E"
+                  src="https://img.shields.io/badge/firebase-ff9100?style=for-the-badge&logo=firebase&logoColor=white"
                   alt=""
                   class="h-6"
                 />
@@ -227,30 +215,30 @@
             id="projects-box"
           >
             <img
-              src="img/etch-sketch.png"
+              src="img/weather_app.png"
               alt=""
               class="w-full h-[350px] object-cover block rounded-t-lg"
             />
             <div class="p-4" id="info">
               <div class="flex flex-row justify-between">
-                <h3 class="text-xl font-bold mb-2">Etch-A-Sketch</h3>
+                <h3 class="text-xl font-bold mb-2">Weather App</h3>
                 <div class="flex flex-wrap justify-end gap-3">
                   <a
-                    href="https://github.com/ivand38/js-etch-a-sketch"
+                    href="https://github.com/ivand38/js-weather-app"
                     target="_blank"
                     ><i class="bi bi-github"></i
                   ></a>
                   <a
-                    href="https://ivand38.github.io/js-etch-a-sketch/"
+                    href="https://ivand38.github.io/js-weather-app/"
                     target="_blank"
                     ><i class="bi bi-box-arrow-up-right"></i
                   ></a>
                 </div>
               </div>
               <p class="text-sm font-medium line-clamp-3 mb-4">
-                A simple Etch-A-Sketch web-based recreation built using
-                JavaScript. It allows users to create drawings by moving a
-                cursor over a grid.
+                A simple weather app built using JavaScript, leveraging the
+                Visual Crossing API to provide accurate and up-to-date weather
+                information.
               </p>
               <div class="flex flex-wrap justify-start gap-2">
                 <img
@@ -259,7 +247,7 @@
                   class="h-6"
                 />
                 <img
-                  src="https://img.shields.io/badge/CSS-563d7c?&style=for-the-badge&logo=css3&logoColor=white"
+                  src="https://img.shields.io/badge/Tailwind-06B6D4?style=for-the-badge&logo=tailwind-css&logoColor=white"
                   alt=""
                   class="h-6"
                 />
