--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     class="bg-black-pearl text-sm md:text-lg font-raleway mb-20 p-0 overflow-x-hidden w-screen h-screen"
   >
     <header class="pt-8 pb-8 pl-12 pr-12 bg-transparent">
-      <a href="template.html"
+      <a href="index.html"
         ><img src="./img/logo.png" width="48" height="48" alt=""
       /></a>
     </header>
@@ -114,7 +114,7 @@
                 class="h-6"
               />
               <img
-                src="https://img.shields.io/badge/Jest-C21325?style=for-the-badge&logo=jest&logoColor=white"
+                src="https://img.shields.io/badge/firebase-ff9100?style=for-the-badge&logo=firebase&logoColor=white"
                 alt=""
                 class="h-6"
               />
@@ -130,7 +130,7 @@
               />
             </div>
             <a
-              href="https://drive.google.com/file/d/1Wfw6y7VWAdwP7ZNHsIZZMG1th_mCkFjV/view?usp=sharing"
+              href="https://drive.google.com/file/d/1mO6GYu3G2Pk_JmiMNJApSihe6vPWX6cl/view?usp=sharing"
               target="_blank"
             >
               <div
@@ -199,44 +199,32 @@
               id="projects-box"
             >
               <img
-                src="img/weather_app.png"
+                src="img/skytrip.png"
                 alt=""
                 class="w-full h-[350px] object-cover block rounded-t-lg"
               />
               <div class="p-4" id="info">
                 <div class="flex flex-row justify-between">
-                  <h3 class="text-xl font-bold mb-2">Weather App</h3>
+                  <h3 class="text-xl font-bold mb-2">SkyTrip</h3>
                   <div class="flex flex-wrap justify-end gap-3">
-                    <a
-                      href="https://github.com/ivand38/js-weather-app"
-                      target="_blank"
+                    <a href="https://github.com/ivand38/SkyTrip" target="_blank"
                       ><i class="bi bi-github"></i
-                    ></a>
-                    <a
-                      href="https://ivand38.github.io/js-weather-app/"
-                      target="_blank"
-                      ><i class="bi bi-box-arrow-up-right"></i
                     ></a>
                   </div>
                 </div>
                 <p class="text-sm font-medium line-clamp-4 mb-4">
-                  A simple weather app built using JavaScript, leveraging the
-                  Visual Crossing API to provide accurate and up-to-date weather
-                  information.
+                  SkyTrip is a flight booking app built with Flutter and
+                  Firebase, allowing users to book plane tickets for trips to
+                  various countries seamlessly.
                 </p>
                 <div class="flex flex-wrap justify-start gap-2">
                   <img
-                    src="https://img.shields.io/badge/HTML-e34c26?style=for-the-badge&logo=html5&logoColor=white"
+                    src="https://img.shields.io/badge/Flutter-02569B?style=for-the-badge&logo=flutter&logoColor=white"
                     alt=""
                     class="h-6"
                   />
                   <img
-                    src="https://img.shields.io/badge/Tailwind-06B6D4?style=for-the-badge&logo=tailwind-css&logoColor=white"
-                    alt=""
-                    class="h-6"
-                  />
-                  <img
-                    src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E"
+                    src="https://img.shields.io/badge/firebase-ff9100?style=for-the-badge&logo=firebase&logoColor=white"
                     alt=""
                     class="h-6"
                   />
