--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
                     <a href="https://github.com/ivand38/SkyTrip" target="_blank"
                       ><i class="bi bi-github"></i
                     ></a>
+                    <a
+                      href="https://www.youtube.com/watch?v=VSHteTNn8t8"
+                      target="_blank"
+                      ><i class="bi bi-box-arrow-up-right"></i
+                    ></a>
                   </div>
                 </div>
                 <p class="text-sm font-medium line-clamp-4 mb-4">
